--- a/public_html/index.html
+++ b/public_html/index.html
@@ -30,7 +30,7 @@ and open the template in the editor.
 			<li><a href="http://localhost:8383/ExamenFinal/Sobrenosotros.html">Sobre Nosotros</a></li>
 			<li><a href="">Productos/Servicios</a></li>
 			
-			<li><a href="#">Contacto</a></li>
+			<li><a href="http://localhost:8383/ExamenFinal/imagenes/Contacto.html">Contacto</a></li>
 			
 		</ul>
 	</nav>
